# solle

./: .env.example  .gitignore  AGENTS.md  DEVNET_GUIDE.md  HOWTORUN.md  PRODUCT.md  PRODUCT_VISION.md  README.md  STATUS.md  docker-compose.yml  graphic.md  migration.md  package.json  pnpm-lock.yaml  setup.md
.github/workflows/: ci.yml  release.yml
apps/agent-worker/: .env.example  main.py  requirements.txt
apps/api/: package.json
apps/client-desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-desktop/src-tauri/capabilities/: default.json
apps/client-desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
apps/web/: package.json  tailwind.config.ts
data/mock/: generate_realistic_sales.py  generate_sales.py  sales_data.csv
docker/postgres/: init.sql
docs/sessions/: SESSION-2026-05-14.md  SESSION-2026-05-17.md  SESSION-2026-05-19.md  SESSION-2026-05-20.md
mcp-servers/mcp-business-data/: main.py
mcp-servers/mcp-calendar-tasks/: main.py
mcp-servers/mcp-desktop-automation/: main.py  requirements.txt
mcp-servers/mcp-email-drafts/: main.py
mcp-servers/mcp-file-system/: main.py
mcp-servers/mcp-obsidian-memory/: main.py
mcp-servers/mcp-shopify/: main.py
mcp-servers/mcp-web-research/: main.py  requirements.txt
programs/solli/: Anchor.toml  package-lock.json
scripts/: build-windows.ps1  create-selfsigned-cert.ps1  dev-backend.sh  dev-client.sh  generate-icons.py  install.ps1  setup.sh  sync-obsidian.sh
(+170 files in other folders)
