[package]
name = "volle-desktop"
version = "0.1.0"
description = "Volle Desktop Voice Agent"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
